--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/styles/css/style.css">
-        <link rel="shortcut icon" type="imagex/png" href="assets/img/pokeballIcon.png">
+        <link rel="shortcut icon" type="imagex/png" href="assets/img/icons/pokeballIcon.png">
         <title>Pokédex</title>
     </head>
 
