--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav>
             <div class="search">
-                <input type="text" name="search" id="search" placeholder="Procure um pokémon">
+                <input type="search" name="search" id="search" placeholder="Procure um pokémon">
                 <div class="searchIcon">
                     <svg width="25" height="25" fill="none" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10 17a7 7 0 1 0 0-14 7 7 0 0 0 0 14Z"></path>
