--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-        <nav>
-            <div class="search">
+         <nav>
+            <!-- <div class="search">
                 <input type="search" name="search" id="search" placeholder="Procure um pokémon">
                 <div class="searchIcon">
                     <svg width="25" height="25" fill="none" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -18,8 +18,8 @@
                         <path d="m21 21-6-6"></path>
                     </svg>
                 </div>
-            </div>
-        </nav>
+            </div> -->
+        </nav> 
 
 
         <main>
